Made CLLocationManager class a singleton. Fixed text field scrolling. Issue with food category in API query.

--- a/showList/en.lproj/MainStoryboard.storyboard
+++ b/showList/en.lproj/MainStoryboard.storyboard
@@ -84,7 +84,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="foodCheckbox" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xSl-l1-zb0">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="eon-nI-Q5R"/>
+                                    <constraint firstAttribute="height" constant="20" id="8xW-P1-asS"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal">
@@ -149,20 +149,20 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Books" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lhl-sn-pKe">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="85" id="GGG-SU-OIy"/>
-                                </constraints>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Books &amp; Film" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lhl-sn-pKe">
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Comedy" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xbh-9S-S4G">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="All Events" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xbh-9S-S4G">
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Family &amp; Kids" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="85" translatesAutoresizingMaskIntoConstraints="NO" id="C2G-wr-eQ1">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="85" id="Zid-Sv-MOv"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -182,57 +182,56 @@
                         <constraints>
                             <constraint firstItem="lhl-sn-pKe" firstAttribute="baseline" secondItem="IjJ-hI-kVy" secondAttribute="baseline" type="default" id="0e2-yZ-maX"/>
                             <constraint firstItem="qyF-95-Ar6" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="151" id="0hR-bz-4Zm"/>
-                            <constraint firstItem="3xE-K0-kkv" firstAttribute="top" secondItem="3" secondAttribute="top" constant="84" id="2Y5-ys-naP"/>
-                            <constraint firstItem="lhl-sn-pKe" firstAttribute="bottom" secondItem="qyF-95-Ar6" secondAttribute="bottom" type="default" id="3aE-sA-Q1R"/>
+                            <constraint firstItem="tz7-0S-SYE" firstAttribute="leading" secondItem="IjJ-hI-kVy" secondAttribute="leading" type="default" id="2YR-N6-44M"/>
+                            <constraint firstItem="tz7-0S-SYE" firstAttribute="trailing" secondItem="IjJ-hI-kVy" secondAttribute="trailing" type="default" id="3IN-1E-wOF"/>
                             <constraint firstItem="dyr-NB-eiq" firstAttribute="leading" secondItem="Sqj-tB-aiK" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="53T-vy-N0X"/>
+                            <constraint firstItem="C2G-wr-eQ1" firstAttribute="leading" secondItem="c7U-U0-pyQ" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="6rA-WR-ZL4"/>
                             <constraint firstItem="IjJ-hI-kVy" firstAttribute="bottom" secondItem="H6g-CV-nUz" secondAttribute="bottom" type="default" id="8ET-mu-yEf"/>
                             <constraint firstAttribute="trailing" secondItem="dyr-NB-eiq" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="8JL-Ox-kjm"/>
-                            <constraint firstItem="C2G-wr-eQ1" firstAttribute="top" secondItem="3" secondAttribute="top" constant="116" id="97p-zr-RjC"/>
+                            <constraint firstItem="tz7-0S-SYE" firstAttribute="baseline" secondItem="C2G-wr-eQ1" secondAttribute="baseline" type="default" id="Aca-jp-YO5"/>
                             <constraint firstItem="JkS-oS-pGQ" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="EBb-ey-mg0"/>
                             <constraint firstItem="lhl-sn-pKe" firstAttribute="leading" secondItem="qyF-95-Ar6" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="F8e-1y-B7l"/>
-                            <constraint firstItem="tz7-0S-SYE" firstAttribute="leading" secondItem="3xE-K0-kkv" secondAttribute="leading" type="default" id="FCd-fr-tpN"/>
                             <constraint firstItem="qyF-95-Ar6" firstAttribute="top" secondItem="H6g-CV-nUz" secondAttribute="top" type="default" id="FWs-QV-d3n"/>
+                            <constraint firstItem="IjJ-hI-kVy" firstAttribute="bottom" secondItem="qyF-95-Ar6" secondAttribute="bottom" type="default" id="GaB-zC-RYs"/>
+                            <constraint firstItem="xbh-9S-S4G" firstAttribute="bottom" secondItem="wGB-xk-ty6" secondAttribute="bottom" type="default" id="IAL-HW-gAt"/>
                             <constraint firstAttribute="bottom" secondItem="dyr-NB-eiq" secondAttribute="bottom" constant="102" id="IoR-tD-BNT"/>
-                            <constraint firstItem="3xE-K0-kkv" firstAttribute="bottom" secondItem="1PL-Gk-THS" secondAttribute="bottom" type="default" id="KSj-Hf-tNb"/>
+                            <constraint firstItem="xSl-l1-zb0" firstAttribute="bottom" secondItem="3xE-K0-kkv" secondAttribute="bottom" type="default" id="IqP-sj-x6G"/>
                             <constraint firstAttribute="bottom" secondItem="5SF-cC-BL9" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="Kam-lb-Eid"/>
                             <constraint firstItem="IjJ-hI-kVy" firstAttribute="leading" secondItem="H6g-CV-nUz" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="Klz-gQ-0Bl"/>
-                            <constraint firstItem="3xE-K0-kkv" firstAttribute="leading" secondItem="IjJ-hI-kVy" secondAttribute="leading" type="default" id="NPY-0a-R2f"/>
+                            <constraint firstItem="xSl-l1-zb0" firstAttribute="leading" secondItem="1PL-Gk-THS" secondAttribute="leading" type="default" id="Km9-87-5Bm"/>
                             <constraint firstAttribute="bottom" secondItem="JkS-oS-pGQ" secondAttribute="bottom" constant="173" id="NvM-2B-gie"/>
-                            <constraint firstItem="xbh-9S-S4G" firstAttribute="bottom" secondItem="c7U-U0-pyQ" secondAttribute="bottom" type="default" id="PYj-gE-bcp"/>
                             <constraint firstItem="c7U-U0-pyQ" firstAttribute="top" secondItem="1PL-Gk-THS" secondAttribute="top" type="default" id="Ptd-a4-6mc"/>
                             <constraint firstItem="3xE-K0-kkv" firstAttribute="leading" secondItem="1PL-Gk-THS" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="QAx-u9-Obu"/>
                             <constraint firstItem="QZX-4T-kQR" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="RCv-AO-RDo"/>
                             <constraint firstItem="Sqj-tB-aiK" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="RUS-WR-WIJ"/>
-                            <constraint firstItem="xSl-l1-zb0" firstAttribute="top" secondItem="3" secondAttribute="top" constant="118" id="Tsd-8y-mjz"/>
-                            <constraint firstItem="xbh-9S-S4G" firstAttribute="baseline" secondItem="3xE-K0-kkv" secondAttribute="baseline" type="default" id="UAa-5D-ONQ"/>
+                            <constraint firstItem="C2G-wr-eQ1" firstAttribute="leading" secondItem="lhl-sn-pKe" secondAttribute="leading" type="default" id="RrC-fZ-UYb"/>
+                            <constraint firstItem="xbh-9S-S4G" firstAttribute="leading" secondItem="wGB-xk-ty6" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="UQZ-qw-sCU"/>
+                            <constraint firstItem="3xE-K0-kkv" firstAttribute="top" secondItem="tz7-0S-SYE" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="VdH-I2-T7C"/>
                             <constraint firstItem="NuO-zs-e6c" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="WT3-8V-NnJ"/>
                             <constraint firstItem="IjJ-hI-kVy" firstAttribute="top" secondItem="3" secondAttribute="top" constant="51" id="XAR-Ly-yAx"/>
-                            <constraint firstItem="wGB-xk-ty6" firstAttribute="bottom" secondItem="xSl-l1-zb0" secondAttribute="bottom" type="default" id="Yyx-Q2-Jd1"/>
-                            <constraint firstItem="xbh-9S-S4G" firstAttribute="leading" secondItem="lhl-sn-pKe" secondAttribute="leading" type="default" id="Zuz-tW-3Jo"/>
-                            <constraint firstItem="C2G-wr-eQ1" firstAttribute="baseline" secondItem="tz7-0S-SYE" secondAttribute="baseline" type="default" id="amc-aU-71W"/>
                             <constraint firstItem="NuO-zs-e6c" firstAttribute="centerX" secondItem="5SF-cC-BL9" secondAttribute="centerX" type="default" id="axp-JJ-tod"/>
+                            <constraint firstItem="tz7-0S-SYE" firstAttribute="top" secondItem="IjJ-hI-kVy" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="bI8-So-JbX"/>
                             <constraint firstItem="xbh-9S-S4G" firstAttribute="leading" secondItem="c7U-U0-pyQ" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="cV1-HD-rWh"/>
-                            <constraint firstItem="H6g-CV-nUz" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="23" id="cY0-nX-MhW"/>
+                            <constraint firstItem="c7U-U0-pyQ" firstAttribute="bottom" secondItem="1PL-Gk-THS" secondAttribute="bottom" type="default" id="elB-1O-66o"/>
                             <constraint firstAttribute="bottom" secondItem="QZX-4T-kQR" secondAttribute="bottom" constant="219" id="fcp-zU-f4s"/>
-                            <constraint firstItem="tz7-0S-SYE" firstAttribute="leading" secondItem="xSl-l1-zb0" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="ffR-7g-lLV"/>
+                            <constraint firstItem="3xE-K0-kkv" firstAttribute="leading" secondItem="xSl-l1-zb0" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="fnq-LT-jde"/>
                             <constraint firstItem="1PL-Gk-THS" firstAttribute="leading" secondItem="H6g-CV-nUz" secondAttribute="leading" type="default" id="g4Z-0U-Zju"/>
                             <constraint firstAttribute="trailing" secondItem="NuO-zs-e6c" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="gO9-Jm-FnT"/>
-                            <constraint firstItem="xbh-9S-S4G" firstAttribute="trailing" secondItem="lhl-sn-pKe" secondAttribute="trailing" type="default" id="gTr-aj-60R"/>
                             <constraint firstItem="rcE-on-bZe" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="hvq-w9-HVB"/>
-                            <constraint firstItem="xSl-l1-zb0" firstAttribute="leading" secondItem="1PL-Gk-THS" secondAttribute="leading" type="default" id="iEC-Df-17y"/>
-                            <constraint firstItem="C2G-wr-eQ1" firstAttribute="leading" secondItem="xbh-9S-S4G" secondAttribute="leading" type="default" id="iSz-Ni-WeG"/>
                             <constraint firstItem="rcE-on-bZe" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="ipB-pm-bOd"/>
-                            <constraint firstItem="C2G-wr-eQ1" firstAttribute="leading" secondItem="wGB-xk-ty6" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="quf-gW-YiW"/>
+                            <constraint firstItem="tz7-0S-SYE" firstAttribute="leading" secondItem="1PL-Gk-THS" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="kIG-Tx-AcJ"/>
+                            <constraint firstItem="xSl-l1-zb0" firstAttribute="top" secondItem="wGB-xk-ty6" secondAttribute="top" type="default" id="luz-UD-wFk"/>
+                            <constraint firstItem="1PL-Gk-THS" firstAttribute="top" secondItem="3" secondAttribute="top" constant="85" id="mPF-te-Vwb"/>
                             <constraint firstItem="wGB-xk-ty6" firstAttribute="leading" secondItem="c7U-U0-pyQ" secondAttribute="leading" type="default" id="rB8-wP-vd8"/>
                             <constraint firstItem="dyr-NB-eiq" firstAttribute="top" secondItem="NuO-zs-e6c" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="rM3-Bi-Tdb"/>
                             <constraint firstItem="c7U-U0-pyQ" firstAttribute="leading" secondItem="qyF-95-Ar6" secondAttribute="leading" type="default" id="rR0-TI-g9I"/>
                             <constraint firstItem="rcE-on-bZe" firstAttribute="trailing" secondItem="QZX-4T-kQR" secondAttribute="trailing" type="default" id="sJV-Ns-Wlx"/>
                             <constraint firstItem="C2G-wr-eQ1" firstAttribute="trailing" secondItem="xbh-9S-S4G" secondAttribute="trailing" type="default" id="sQh-vA-yMq"/>
-                            <constraint firstItem="wGB-xk-ty6" firstAttribute="top" secondItem="xSl-l1-zb0" secondAttribute="top" type="default" id="taW-9n-lt7"/>
-                            <constraint firstItem="3xE-K0-kkv" firstAttribute="trailing" secondItem="IjJ-hI-kVy" secondAttribute="trailing" type="default" id="vcf-5o-dV5"/>
                             <constraint firstAttribute="trailing" secondItem="JkS-oS-pGQ" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="wR8-ce-q7v"/>
                             <constraint firstItem="tz7-0S-SYE" firstAttribute="trailing" secondItem="3xE-K0-kkv" secondAttribute="trailing" type="default" id="wou-gr-rVx"/>
+                            <constraint firstItem="xbh-9S-S4G" firstAttribute="baseline" secondItem="3xE-K0-kkv" secondAttribute="baseline" type="default" id="xEr-AJ-JuY"/>
                             <constraint firstItem="Sqj-tB-aiK" firstAttribute="centerY" secondItem="dyr-NB-eiq" secondAttribute="centerY" type="default" id="xRk-ut-BVg"/>
+                            <constraint firstItem="H6g-CV-nUz" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="23" id="zJK-Cf-MeN"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="HYp-hf-IRl"/>
